--- a/css/common.css
+++ b/css/common.css
@@ -14,3 +14,5 @@
 }
 
 .authorcard{ width:150px; height:120px; float:left; background:#FFFFFF; border-color:#FFA500; border-width:2px;	border-style:solid;}
+
+.newtag {display:inline-block;padding-left:8px;padding-right:8px;text-align:left}
