--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,14 @@
     border-style:solid;
 }
 
-.authorcard{ width:150px; height:120px; float:left; background:#FFFFFF; border-color:#FFA500; border-width:2px;	border-style:solid;}
+.borderwhite {
+	border-color:#FFFFFF;
+    border-width:3px;	
+    border-style:ridge;
+}
 
-.newtag {display:inline-block;padding-left:8px;padding-right:8px;text-align:left}
+.authorcard{ width:150px; height:120px; float:left; }
+
+.newtag {display:inline-block;padding-left:8px;padding-right:8px;text-align:left;}
+
+.anoline {text-decoration:none;}
