--- a/css/common.css
+++ b/css/common.css
@@ -9,6 +9,8 @@ p, li {
 h1, h2, h3, h4, h5, h6, h7 {
 	font-family: Bookman Old Style, Palatino Linotype, Georgia, Serif;
 	}
+	
+h1{font-size:28px}h2{font-size:24px}h3{font-size:20px}h4{font-size:18px}h5{font-size:16px}h6{font-size:14px}
 
 .doubleborder {
     border-width:7px;	
