--- a/css/common.css
+++ b/css/common.css
@@ -8,6 +8,7 @@ p, li {
 
 h1, h2, h3, h4, h5, h6, h7 {
 	font-family: Bookman Old Style, Palatino Linotype, Georgia, Serif;
+	font-weight: normal;
 	}
 	
 h1{font-size:28px}h2{font-size:24px}h3{font-size:20px}h4{font-size:18px}h5{font-size:16px}h6{font-size:14px}
