--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,12 @@ h1, h2, h3, h4, h5, h6, h7 {
 	
 h1 {font-size:28px}h2{font-size:24px}h3{font-size:20px}h4{font-size:18px}h5{font-size:16px}h6{font-size:14px}
 
+th, td {
+    border-bottom: 1px solid #000;
+}
+
+hr {border-style:solid; border-color:#000;}
+
 .doubleborder {
     border-width:7px;	
     border-style:ridge;
