--- a/css/common.css
+++ b/css/common.css
@@ -42,3 +42,5 @@ hr {border-style:solid; border-color:#000;}
 .newtag {display:inline-block;padding-left:8px;padding-right:8px;text-align:left;}
 
 .anoline {text-decoration:none;}
+
+.imgborder{border:1px solid #818181;}
